@@ -8,6 +8,7 @@ pyReScene 0.6
  * pyReScene Auto: failed to create SRRs when 'subs' was found in file names
  * pyReScene Auto: --best option added (same as -c -s -v)
  * pyReScene Auto: includes images from Cover/Covers subfolders
+ * pyReScene Auto: fewer .mp3.txt files
  * ReSample: MemoryError on large MP4s fixed and 
              skipping crc32 calculation when possible
  * ReSample: KeyError fixed for RIFF mp3
@@ -17,6 +18,7 @@ pyReScene 0.6
  * ReScene: SRR was stored in subfolder instead of output folder
  * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
  * ReScene: -x and -d extracts to folder named after .srr in the output path
+ * New script added to detect bad "samples" in SRR files. (resample/srs_bad.py)
 
 pyReScene 0.5.1 (2013-07-14)
 ===============
